--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="water_reduction_needed">Water reduction needed</string>
     <string name="water_reduction_percentage">Water reduction percentage</string>
     <string name="field_cannot_be_empty">Field cannot be empty</string>
+    <string name="calculation_results">Calculation results</string>
 </resources>
