--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,43 +1,51 @@
 <resources>
+    <string name="admixture">Admixture</string>
     <string name="app_name">Concrete Calc</string>
-    <string name="mix_design">Mix Design</string>
     <string name="back_button">Back button</string>
-    <string name="enter_data_mix_design">Input data in respective locations as given below as per hint</string>
-    <string name="grade_of_concrete">Grade of Concrete</string>
-    <string name="exposure_condition">Exposure condition</string>
-    <string name="slump_value_in_mm">Slump value in mm</string>
-    <string name="nominal_max_aggregate_size">Nominal max aggregate size</string>
-    <string name="zone_of_fine_aggregate">Zone of fine aggregate</string>
-    <string name="type_of_concrete">Type of concrete</string>
-    <string name="type_of_concrete_application">Type of concrete application</string>
-    <string name="grade_of_cement">Grade of Cement</string>
-    <string name="specific_gravity">Specific gravity</string>
-    <string name="sp_gravity_of_water">Sp. gravity (Water)</string>
-    <string name="sp_gravity_of_cement">Sp. gravity (Cement)</string>
-    <string name="sp_gravity_of_fine_aggregate">Sp. gravity (Fine)</string>
-    <string name="sp_gravity_of_coarse_aggregate">Sp. gravity (Coarse)</string>
-    <string name="sp_gravity_of_admixture">Sp. gravity (Admixture)</string>
-    <string name="dosage_of_admixture">Dosage of admixture</string>
-    <string name="degree_of_water_reduction_envisaged">Degree of water reduction envisaged (in %)</string>
     <string name="calculate">Calculate</string>
-    <string name="project_name">Project Name/ID (Optional)</string>
-    <string name="project_and_strength_requirements">Project &amp; strength requirements</string>
-    <string name="material_properties_cement_and_water">Material properties - Cement &amp; Water</string>
-    <string name="material_properties_aggregate">Material properties - Aggregate</string>
-    <string name="water_reduction_needed">Water reduction needed</string>
-    <string name="water_reduction_percentage">Water reduction percentage</string>
-    <string name="field_cannot_be_empty">Field cannot be empty</string>
     <string name="calculation_results">Calculation results</string>
     <string name="cement">Cement</string>
-    <string name="water">Water</string>
-    <string name="fine">Fine</string>
-    <string name="coarse">Coarse</string>
-    <string name="fine_aggregate">Fine aggregate</string>
-    <string name="coarse_aggregate">Coarse aggregate</string>
-    <string name="admixture">Admixture</string>
-    <string name="sand">Sand</string>
-    <string name="gravel">Gravel</string>
+    <string name="cement_cost">Cement cost</string>
     <string name="clean_potable">Clean, Potable</string>
+    <string name="coarse">Coarse</string>
+    <string name="coarse_aggregate">Coarse aggregate</string>
+    <string name="cost_estimate">Cost estimate</string>
+    <string name="degree_of_water_reduction_envisaged">Degree of water reduction envisaged (in %)</string>
+    <string name="dosage_of_admixture">Dosage of admixture</string>
+    <string name="enter_data_mix_design">Input data in respective locations as given below as per hint</string>
+    <string name="exposure_condition">Exposure condition</string>
+    <string name="field_cannot_be_empty">Field cannot be empty</string>
+    <string name="fine">Fine</string>
+    <string name="fine_aggregate">Fine aggregate</string>
+    <string name="grade_of_cement">Grade of Cement</string>
+    <string name="grade_of_concrete">Grade of Concrete</string>
+    <string name="gravel">Gravel</string>
+    <string name="gravel_cost">Gravel cost</string>
+    <string name="material_breakdown">Material breakdown</string>
+    <string name="material_properties_aggregate">Material properties - Aggregate</string>
+    <string name="material_properties_cement_and_water">Material properties - Cement &amp; Water</string>
+    <string name="mix_design">Mix Design</string>
+    <string name="nominal_max_aggregate_size">Nominal max aggregate size</string>
+    <string name="project_and_strength_requirements">Project &amp; strength requirements</string>
+    <string name="project_name">Project Name/ID (Optional)</string>
+    <string name="sand">Sand</string>
+    <string name="volume">Volume</string>
+    <string name="weight">Weight</string>
+    <string name="sand_cost">Sand cost</string>
+    <string name="slump_value_in_mm">Slump value in mm</string>
+    <string name="sp_gravity_of_admixture">Sp. gravity (Admixture)</string>
+    <string name="sp_gravity_of_cement">Sp. gravity (Cement)</string>
+    <string name="sp_gravity_of_coarse_aggregate">Sp. gravity (Coarse)</string>
+    <string name="sp_gravity_of_fine_aggregate">Sp. gravity (Fine)</string>
+    <string name="sp_gravity_of_water">Sp. gravity (Water)</string>
+    <string name="specific_gravity">Specific gravity</string>
+    <string name="total_estimated_cost">Total estimated cost</string>
+    <string name="type_of_concrete">Type of concrete</string>
+    <string name="type_of_concrete_application">Type of concrete application</string>
     <string name="volume_of_concrete">Volume of concrete</string>
     <string name="volume_of_concrete_based_on_input">Volume of concrete based on input</string>
+    <string name="water">Water</string>
+    <string name="water_reduction_needed">Water reduction needed</string>
+    <string name="water_reduction_percentage">Water reduction percentage</string>
+    <string name="zone_of_fine_aggregate">Zone of fine aggregate</string>
 </resources>
