--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="sand">Sand</string>
     <string name="volume">Volume</string>
     <string name="weight">Weight</string>
+    <string name="cost_estimation">Cost estimation</string>
+    <string name="des_cost_estimation">Estimate concrete material costs</string>
+    <string name="des_mix_design">Calculate concrete mix proportions</string>
     <string name="sand_cost">Sand cost</string>
     <string name="slump_value_in_mm">Slump value in mm</string>
     <string name="sp_gravity_of_admixture">Sp. gravity (Admixture)</string>
